--- a/ConsistentVariants/ConsistentVariants.csproj
+++ b/ConsistentVariants/ConsistentVariants.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsistentVariants.cs" />
+    <Compile Include="ModuleConsistentVariants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
