Add support for Missing History

--- a/GameData/ConsistentVariants/Stock.cfg
+++ b/GameData/ConsistentVariants/Stock.cfg
@@ -1088,3 +1088,394 @@ CONSISTENT_VARIANT
 		Theme = FoilSilver
 	}
 }
+CONSISTENT_VARIANT
+{
+	PartName = EnginePlate1p5
+	PartDisplayName = EP-18 Engine Plate
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = EnginePlate2
+	PartDisplayName = EP-25 Engine Plate
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = EnginePlate1
+	PartDisplayName = EP-12 Engine Plate
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = EnginePlate3
+	PartDisplayName = EP-37 Engine Plate
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = EnginePlate4
+	PartDisplayName = EP-50 Engine Plate
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = LiquidEngineRE-I2
+	PartDisplayName = RE-I2 "Skiff" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Shroud
+		DisplayName = Shrouded
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = LiquidEngineRK-7
+	PartDisplayName = RK-7 "Kodiak" Liquid Fueled Engine
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = ShroudSmall
+		DisplayName = Shroud Small
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = ShroudBig
+		DisplayName = Shroud Big
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Tube1
+	PartDisplayName = T-12 Structural Tube
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Tube1p5
+	PartDisplayName = T-18 Structural Tube
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Tube2
+	PartDisplayName = T-25 Structural Tube
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Tube3
+	PartDisplayName = T-37 Structural Tube
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Tube4
+	PartDisplayName = T-50 Structural Tube
+	VARIANT
+	{
+		VariantName = Short
+		DisplayName = Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Short
+		DisplayName = Medium-Short
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium
+		DisplayName = Medium
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Medium-Long
+		DisplayName = Medium-Long
+		Theme = N/A 
+	}
+	VARIANT
+	{
+		VariantName = Long
+		DisplayName = Long
+		Theme = N/A 
+	}
+}
+
