Update all the things

--- a/GameData/ConsistentVariants/Stock.cfg
+++ b/GameData/ConsistentVariants/Stock.cfg
@@ -1479,3 +1479,1148 @@ CONSISTENT_VARIANT
 	}
 }
 
+    CONSISTENT_VARIANT
+{
+	PartName = rocketNoseConeSize3
+	PartDisplayName = Protective Rocket Nose Cone Mk12A
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = smallRadialEngine.v2
+	PartDisplayName = 24-77 "Twitch" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+	VARIANT
+	{
+		VariantName = GrayAndOrange
+		DisplayName = Gray and Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = radialEngineMini.v2
+	PartDisplayName = LV-1R "Spider" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Shroud
+		DisplayName = Shroud
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = microEngine.v2
+	PartDisplayName = LV-1 "Ant" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Shroud
+		DisplayName = Shroud
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = liquidEngineMainsail.v2
+	PartDisplayName = RE-M3 "Mainsail" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Full
+		DisplayName = Full
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Mid
+		DisplayName = Mid
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = engineLargeSkipper.v2
+	PartDisplayName = RE-I5 "Skipper" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Shroud
+		DisplayName = Shroud
+		Theme = Orange
+	}
+	VARIANT
+	{
+		VariantName = TrussMount
+		DisplayName = Truss Mount
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size3LargeTank
+	PartDisplayName = Kerbodyne S3-14400 Tank
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = Black and White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size3MediumTank
+	PartDisplayName = Kerbodyne S3-7200 Tank
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size3SmallTank
+	PartDisplayName = Kerbodyne S3-3600 Tank
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = Black and White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size.1.5.Cone
+	PartDisplayName = Protective Rocket Nosecone Mk5A
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = GrayAndOrange
+		DisplayName = Gray and Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = FanShroud.01
+	PartDisplayName = S-062 Fan Shroud
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = FanShroud.02
+	PartDisplayName = S-12 Fan Shroud
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = FanShroud.03
+	PartDisplayName = S-25 Fan Shroud
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = largeFanBlade
+	PartDisplayName = R-25 Ducted Fan Blade
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = largeHeliBlade
+	PartDisplayName = Helicopter Blade Type S
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = largePropeller
+	PartDisplayName = Propeller Blade Type S
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = mediumFanBlade
+	PartDisplayName = R-12 Ducted Fan Blade
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = mediumHeliBlade
+	PartDisplayName = Helicopter Blade Type B
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = mediumPropeller
+	PartDisplayName = Propeller Blade Type B
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = smallFanBlade
+	PartDisplayName = R-062 Ducted Fan Blade
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = smallHeliBlade
+	PartDisplayName = Helicopter Blade Type A
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+        Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = smallPropeller
+	PartDisplayName = Propeller Blade Type A
+	VARIANT
+	{
+		VariantName = Clockwise
+		DisplayName = Clockwise
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Counterclockwise
+		DisplayName = Counterclockwise
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = hinge.01
+	PartDisplayName = G-11 Hinge
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = hinge.01.s
+	PartDisplayName = G-00 Hinge
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = hinge.03
+	PartDisplayName = G-12L Alligator Hinge
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = hinge.03.s
+	PartDisplayName = G-01L Alligator Hinge
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = hinge.04
+	PartDisplayName = G-32W Hinge
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = piston.01
+	PartDisplayName = 3P6 Hydraulic Cylinder
+	VARIANT
+	{
+		VariantName = Gray with Stripes
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = piston.02
+	PartDisplayName = 1P2 Hydraulic Cylinder
+	VARIANT
+	{
+		VariantName = Gray with Stripes
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = piston.03
+	PartDisplayName = 3PT Telescoping Hydraulic Cylinder
+	VARIANT
+	{
+		VariantName = Gray with Stripes
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = piston.04
+	PartDisplayName = 1P4 Telescoping Hydraulic Cylinder
+	VARIANT
+	{
+		VariantName = Gray with Stripes
+		DisplayName = Gray with Stripes
+        Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotoServo.00
+	PartDisplayName = Rotation Servo M-06
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotoServo.02
+	PartDisplayName = Rotation Servo F-12
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotoServo.03
+	PartDisplayName = Rotation Servo M-12
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotoServo.04
+	PartDisplayName = Rotation Servo M-25
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotor.01
+	PartDisplayName = EM-16 Light Duty Rotor
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotor.01s
+	PartDisplayName = EM-16S Light Duty Rotor
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotor.02
+	PartDisplayName = EM-32 Standard Rotor
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotor.02s
+	PartDisplayName = EM-32S Standard Rotor
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotor.03
+	PartDisplayName = EM-64 Heavy Rotor
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rotor.03s
+	PartDisplayName = EM-64S Heavy Rotor
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = Gray with Stripes
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Gray
+		DisplayName = Gray
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = lGripPad
+	PartDisplayName = GP-156 Grip Pad
+	VARIANT
+	{
+		VariantName = Square
+		DisplayName = Square
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Round
+		DisplayName = Round
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = mGripPad
+	PartDisplayName = GP-036 Grip Pad
+	VARIANT
+	{
+		VariantName = Square
+		DisplayName = Square
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Round
+		DisplayName = Round
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = sGripPad
+	PartDisplayName = GP-004 Grip Pad
+	VARIANT
+	{
+		VariantName = Square
+		DisplayName = Square
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Round
+		DisplayName = Round
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = noseCone
+	PartDisplayName = Aerodynamic Nose Cone
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = Gray and Orange
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = pointyNoseConeA
+	PartDisplayName = Advanced Nose Cone - Type A
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = Black and White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = pointyNoseConeB
+	PartDisplayName = Advanced Nose Cone - Type B
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = Black and White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = rocketNoseCone.v2
+	PartDisplayName = Protective Rocket Nose Cone Mk7
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = mk2LanderCabin.v2
+	PartDisplayName = Mk2 Lander Can
+	VARIANT
+	{
+		VariantName = Rover
+		DisplayName = Rover
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Lander
+		DisplayName = Lander
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = liquidEngineMini.v2
+	PartDisplayName = 48-7S "Spark" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Shroud
+		DisplayName = Shroud
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = TrussMount
+		DisplayName = Truss Mount
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = liquidEngine3.v2
+	PartDisplayName = LV-909 "Terrier" Liquid Fuel Engine
+	VARIANT
+	{
+		VariantName = Shroud
+		DisplayName = Shroud
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = TrussMount
+		DisplayName = Truss Mount
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Bare
+		DisplayName = Bare
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = adapterSmallMiniShort
+	PartDisplayName = FL-A5 Adapter
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = adapterSmallMiniTall
+	PartDisplayName = FL-A10 Adapter
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size3To2Adapter.v2
+	PartDisplayName = Kerbodyne ADTP-2-3
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = adapterLargeSmallBi
+	PartDisplayName = TVR-200L Stack Bi-Adapter
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = adapterLargeSmallQuad
+	PartDisplayName = TVR-400L Stack Quad-Adapter
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = adapterLargeSmallTri
+	PartDisplayName = TVR-300L Stack Tri-Adapter
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = largeAdapter
+	PartDisplayName = Rockomax Brand Adapter
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = largeAdapter2
+	PartDisplayName = Rockomax Brand Adapter 02
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = stackBiCoupler.v2
+	PartDisplayName = TVR-200 Stack Bi-Coupler
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = stackQuadCoupler
+	PartDisplayName = TVR-2160C Mk2 Stack Quad-Coupler
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = stackTriCoupler.v2
+	PartDisplayName = TVR-1180C Mk1 Stack Tri-Coupler
+	VARIANT
+	{
+		VariantName = Dark
+		DisplayName = Dark
+		Theme = BWHorizontal
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+
