--- a/GameData/ConsistentVariants/MissingHistory.cfg
+++ b/GameData/ConsistentVariants/MissingHistory.cfg
@@ -1,24 +1,7 @@
 CONSISTENT_VARIANT
 {
-	PartName = Size3LargeTank
-	PartDisplayName = Kerbodyne S3-14400 Tank
-	VARIANT
-	{
-		VariantName = White
-		DisplayName = White
-		Theme = Black and White
-	}
-	VARIANT
-	{
-		VariantName = Dark Grey
-		DisplayName = Gray and Orange
-		Theme = Gray and Orange
-	}
-}
-CONSISTENT_VARIANT
-{
-	PartName = Size3MediumTank
-	PartDisplayName = Kerbodyne S3-7200 Tank
+	PartName = pointyNoseConeA.1p5
+	PartDisplayName = Advanced Nose Cone - Type A-XL
 	VARIANT
 	{
 		VariantName = White
@@ -27,49 +10,83 @@ CONSISTENT_VARIANT
 	}
 	VARIANT
 	{
-		VariantName = Dark Grey
-		DisplayName = Gray and Orange
-		Theme = Gray and Orange
-	}
-}
-CONSISTENT_VARIANT
-{
-	PartName = Size3SmallTank
-	PartDisplayName = Kerbodyne S3-3600 Tank
-	VARIANT
-	{
-		VariantName = White
-		DisplayName = White
-		Theme = Black and White
-	}
-	VARIANT
-	{
-		VariantName = Dark Grey
-		DisplayName = Gray and Orange
-		Theme = Gray and Orange
-	}
-}
-
-CONSISTENT_VARIANT
-{
-	PartName = Size3.Size2.Tank
-	PartDisplayName = Kerbodyne S2-S3 Adapter Tank
-	VARIANT
-	{
-		VariantName = Grey
+		VariantName = BlackAndWhite
 		DisplayName = Black and White
 		Theme = Black and White
 	}
 	VARIANT
 	{
-		VariantName = Dark Grey
-		DisplayName = Gray and Orange
+		VariantName = Orange
+		DisplayName = Orange
 		Theme = Gray and Orange
 	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = pointyNoseConeB.1p5
+	PartDisplayName = Advanced Nose Cone - Type B-XL
 	VARIANT
 	{
 		VariantName = White
 		DisplayName = White
 		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = BlackAndWhite
+		DisplayName = Black and White
+		Theme = Black and White
+	}
+	VARIANT
+	{
+		VariantName = Orange
+		DisplayName = Orange
+		Theme = Gray and Orange
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size3.Size2.Tank
+	PartDisplayName = Kerbodyne S2-S3 Adapter Tank (Deprecated)
+	VARIANT
+	{
+		VariantName = Grey
+		DisplayName = Black and White
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = Dark Grey
+		DisplayName = Gray and Orange
+		Theme = N/A
+	}
+	VARIANT
+	{
+		VariantName = White
+		DisplayName = White
+		Theme = N/A
+	}
+}
+CONSISTENT_VARIANT
+{
+	PartName = Size1p5.Size2.Adapter.02
+	PartDisplayName = FL-A215S Fuel Tank Adapter
+	VARIANT
+	{
+		VariantName = Basic
+		DisplayName = White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Grey
+		DisplayName = Black and White
+		Theme = White
+	}
+	VARIANT
+	{
+		VariantName = Dark Grey
+		DisplayName = Gray and Orange
+		Theme = Gray and Orange
 	}
 }
